refactor: Changed logic of Cell creation
Changed logic of Cell creation and delegated this process to WorldMap. This way I ensure that no new objects of class Cell created but rather reused.